test/spec/br_if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br_if.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/br_if.wast:171:41: type stack size too small at i32.ctz. got 0, expected at least 1
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:171:34: type stack at end of block is 1. expected 0
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:175:41: type stack size too small at i64.ctz. got 0, expected at least 1
  (module (func $type-false-i64 (block (i64.ctz (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:175:34: type stack at end of block is 1. expected 0
  (module (func $type-false-i64 (block (i64.ctz (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:179:41: type stack size too small at f32.neg. got 0, expected at least 1
  (module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:179:34: type stack at end of block is 1. expected 0
  (module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:183:41: type stack size too small at f64.neg. got 0, expected at least 1
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:183:34: type stack at end of block is 1. expected 0
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:188:40: type stack size too small at i32.ctz. got 0, expected at least 1
  (module (func $type-true-i32 (block (i32.ctz (br_if 0 (i32.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:188:33: type stack at end of block is 1. expected 0
  (module (func $type-true-i32 (block (i32.ctz (br_if 0 (i32.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:49: type mismatch at br_if condition. got i64, expected i32
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:40: type stack size too small at i64.ctz. got 0, expected at least 1
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:33: type stack at end of block is 1. expected 0
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:49: type mismatch at br_if condition. got f32, expected i32
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:40: type stack size too small at f32.neg. got 0, expected at least 1
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:33: type stack at end of block is 1. expected 0
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:49: type mismatch at br_if condition. got i64, expected i32
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:40: type stack size too small at f64.neg. got 0, expected at least 1
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:33: type stack at end of block is 1. expected 0
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:206:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:212:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 1)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:218:6: type stack at end of block is 1. expected 0
    (block (br_if 0 (i32.const 0) (i32.const 0)))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:224:6: type stack at end of block is 1. expected 0
    (block (br_if 0 (i32.const 0) (i32.const 1)))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:231:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (nop) (i32.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:237:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (nop) (i32.const 1)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:243:23: type mismatch at br_if value. got i64, expected i32
    (block i32 (drop (br_if 0 (i64.const 1) (i32.const 0))) (i32.const 1))
                      ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:249:23: type mismatch at br_if value. got i64, expected i32
    (block i32 (drop (br_if 0 (i64.const 1) (i32.const 0))) (i32.const 1))
                      ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:256:13: type stack size too small at br_if condition. got 0, expected at least 1
    (block (br_if 0 (nop)))
            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:262:13: type mismatch at br_if condition. got i64, expected i32
    (block (br_if 0 (i64.const 0)))
            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:268:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 0) (nop)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:274:17: type mismatch at br_if condition. got i64, expected i32
    (block i32 (br_if 0 (i32.const 0) (i64.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:274:6: type stack at end of block is 2. expected 1
    (block i32 (br_if 0 (i32.const 0) (i64.const 0)) (i32.const 1))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:280:39: label variable out of range (max 1)
  (module (func $unbound-label (br_if 1 (i32.const 1))))
                                      ^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:284:60: label variable out of range (max 3)
  (module (func $unbound-nested-label (block (block (br_if 5 (i32.const 1))))))
                                                           ^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:288:37: label variable out of range (max 1)
  (module (func $large-label (br_if 0x10000001 (i32.const 1))))
                                    ^^^^^^^^^^
out/third_party/testsuite/br_if.wast:171: assert_invalid passed:
  error: type stack size too small at i32.ctz. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/br_if.wast:175: assert_invalid passed:
  error: type stack size too small at i64.ctz. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/br_if.wast:179: assert_invalid passed:
  error: type stack size too small at f32.neg. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/br_if.wast:183: assert_invalid passed:
  error: type stack size too small at f64.neg. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/br_if.wast:188: assert_invalid passed:
  error: type stack size too small at i32.ctz. got 0, expected at least 1
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/br_if.wast:192: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x0000001d: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:196: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got f32.
  error: @0x00000020: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:200: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x0000001d: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:205: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001e: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:211: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001e: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:217: assert_invalid passed:
  error: type stack at end of block is 1. expected 0
  error: @0x00000020: on_end_expr callback failed
out/third_party/testsuite/br_if.wast:223: assert_invalid passed:
  error: type stack at end of block is 1. expected 0
  error: @0x00000020: on_end_expr callback failed
out/third_party/testsuite/br_if.wast:230: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001f: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:236: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001f: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:242: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x00000020: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:248: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x00000020: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:255: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001c: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:261: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x0000001d: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:267: assert_invalid passed:
  error: type stack size too small at br_if. got 0, expected at least 1
  error: @0x0000001f: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:273: assert_invalid passed:
  error: type mismatch in br_if, expected i32 but got i64.
  error: @0x00000020: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:280: assert_invalid passed:
  error: invalid depth: 1 (max 1)
  error: @0x0000001b: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:284: assert_invalid passed:
  error: invalid depth: 5 (max 3)
  error: @0x0000001f: on_br_if_expr callback failed
out/third_party/testsuite/br_if.wast:288: assert_invalid passed:
  error: invalid depth: 268435457 (max 1)
  error: @0x0000001f: on_br_if_expr callback failed
57/57 tests passed.
;;; STDOUT ;;)
